# scitex-ui

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-ui-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/: APP_DEVELOPER_GUIDE.md  APP_SANDBOX.md
docs/sphinx/: architecture.rst  components.rst  conf.py  index.rst  quickstart.rst
docs/sphinx/api/: scitex_ui.rst
examples/: 00_run_all.sh  01_list_components.py  02_workspace_components.py  README.md  quickstart.py
examples/01_list_components_out/: components.txt
examples/01_list_components_out/FINISHED_SUCCESS/2026Y-05M-09D-08h23m08s_wM6t-main/: components.txt
examples/02_workspace_components_out/: workspace_components.txt
src/scitex_ui/: __init__.py  __main__.py  _cli.py  _registry.py  _skills.py  apps.py
src/scitex_ui/_components/: __init__.py  _app_shell.py  _confirm_modal.py  _data_table.py  _dropdown.py  _file_browser.py  _file_tabs.py  _media_viewer.py  _monaco_editor.py  _package_docs_sidebar.py  _resizer.py  _status_bar.py  _theme_provider.py  _tooltip.py
src/scitex_ui/_docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
src/scitex_ui/_docs/.doctrees/: quickstart.doctree
src/scitex_ui/_docs/api/: scitex_ui.html
src/scitex_ui/_mcp/: __init__.py  inspect.py  server.py
src/scitex_ui/_skills/scitex-ui/: 01_installation.md  01_python-api.md  02_cli.md  02_quick-start.md  03_python-api.md  04_cli-reference.md  20_css-theme.md  30_shell-framework.md  31_shell-modules.md  32_frontend-components.md  33_frontend-components-bridge.md  34_frontend-components-theme.md  SKILL.md  (+7 more)
src/scitex_ui/_sphinx_html/: .buildinfo  APP_DEVELOPER_GUIDE.md  app_developer_guide.html  architecture.html  components.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_ui/components/: __init__.py  _package_docs_sidebar.py
src/scitex_ui/skills/: SKILL.md
tests/: conftest.py  test__cli.py  test__components.py  test__init.py  test__registry.py  test_examples.py
tests/develop/: test_audit.py
tests/examples/: test_01_list_components.py  test_02_workspace_components.py  test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples_smoke.py  test_public_api.py
tests/scitex_ui/: test__cli.py  test_examples.py  test_skills_quality.py
tests/scitex_ui/_components/: conftest.py  test__app_shell.py  test__confirm_modal.py  test__data_table.py  test__dropdown.py  test__file_browser.py  test__file_tabs.py  test__media_viewer.py  test__monaco_editor.py  test__package_docs_sidebar.py  test__resizer.py  test__status_bar.py  test__theme_provider.py  test__tooltip.py
tests/scitex_ui/_mcp/: test_inspect.py  test_server.py
(+392 files in other folders)
