[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-ui"
version = "0.4.4"
description = "Shared frontend UI components for the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    {name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"},
]
keywords = [
    "ui",
    "components",
    "frontend",
    "django",
    "typescript",
    "scitex",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.scripts]
scitex-ui = "scitex_ui._cli:main"

[project.optional-dependencies]
cli = ["click>=8.0.0", "scitex-dev"]
mcp = ["fastmcp>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "scitex-dev"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "click>=8.0.0",
    "fastmcp>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scitex-dev",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]

[project.entry-points."scitex_dev.docs"]
scitex-ui = "scitex_ui"

[project.entry-points."scitex_dev.skills"]
scitex-ui = "scitex_ui"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-ui"
Repository = "https://github.com/ywatanabe1989/scitex-ui"
Documentation = "https://scitex-ui.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel.force-include]
"src/scitex_ui/_skills" = "scitex_ui/_skills"
